# monopoly

./: .env.sample  .gitignore  LICENSE  README.md  auction.py  board.py  card_handlers.py  cards.py  choice_handlers.py  choices.py  commands.py  deck.py  demo.py  dice.py  events.py  game.py  player.py  pyproject.toml  requirements.txt  tile_handlers.py  tiles.py
.github/workflows/: ci.yml
boards/: classic.py
clients/web/: index.html  ws_client.js
clients/web/404/: index.html  script.js
clients/web/browse/: index.html  script.js
clients/web/game/: game.js  index.html
clients/web/games/: index.html  script.js  styles.css
clients/web/login/: index.html  login.js  script.js
demo/: board.py  game.py  run.py
engine/: auction.py  board.py  card_handlers.py  cards.py  choice_handlers.py  choices.py  deck.py  demo.py  events.py  game.py  pending_payment.py  player.py  rules.py  tile_handlers.py  tiles.py  tradeoffer.py
engine/demo/: game.py  run.py
engine/tests/: conftest.py  test_choice_handlers.py  test_game_helpers.py  test_pending_payment.py  test_tile_handlers.py
scripts/: grant_card.py  seed_cards.py
server/: app.py  auth_db.py  dependecies.py  inventory_db.py  jwt_utils.py  paths.py  protocol.py  session.py
server/routers/: auth.py  avatars.py  browse.py  games.py  inventory.py  lobbies.py  login.py  main.py  profile.py  settings.py  shop.py  signup.py  ws.py
tests/: test_auction.py  test_auth_db.py  test_board.py  test_card_handlers.py  test_deck.py  test_dice.py  test_pending_payment.py  test_player_movement.py  test_tiles.py
(+47 files in other folders)
